# codechess

./: .gitignore  README.md  design.md  pyproject.toml
chessflow/: __init__.py  cli.py  learn.py  quiz.py  serialization.py
chessflow/analysis/: __init__.py  build.py  model.py  scoring.py
chessflow/chess_model/: __init__.py  bishop.py  board.py  king.py  knight.py  moves.py  pawn.py  piece.py  queen.py  relations.py  rook.py  slider.py
chessflow/conformance/: __init__.py  result.py  runner.py
chessflow/flow_language/: __init__.py  ast.py  expressions.py  parser.py
chessflow/flow_runtime/: __init__.py  action.py  candidate.py  evaluator.py  goal.py  resolver.py  rule.py  runtime.py
chessflow/learning/: __init__.py  model.py  session.py
chessflow/repertoire/: __init__.py  model.py  pgn_import.py
chessflow/reporting/: __init__.py  text.py
chessflow/session/: __init__.py  session.py  snapshot.py
chessflow/simulation/: __init__.py  runner.py
examples/: accelerated-london-benchmark.pgn  accelerated_london_first_pass.flow  accelerated_london_goals.flow  accelerated_london_goals_learn.pgn  accelerated_london_learn.pgn  accelerated_london_ruleset_benchmark_v2.pgn  accelerated_london_second_pass.flow  london-ez.chs  vertical-slice.flow
tests/: test_accelerated_london_benchmark.py  test_accelerated_london_goals.py  test_cli.py  test_learn.py
tests/analysis/: test_analysis.py  test_scoring.py
tests/chess_model/: test_board.py
tests/conformance/: test_runner.py
tests/flow_language/: test_parser.py
tests/flow_runtime/: test_goals.py  test_runtime.py
(+5 files in other folders)
